--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://mjstalzer.github.io/my-react-portfolio"
+  "homepage": "https://mjstalzer.github.io/"
 }
